# Deep

./: .env.example  .gitignore  .venv  DATABASE_SETUP.md  Deep.code-workspace  README.md
MCP/: README.md
MCP/mcp_servers-assets/: .gitignore  README.md  pyproject.toml  tasks.db  test_api.py  test_mcp.py  test_mcp.solution.py  test_mcp_solution.py
MCP/mcp_servers-assets/.deepeval/: .deepeval_telemetry.txt
MCP/mcp_servers-assets/api/: app.py
MCP/mcp_servers-assets/mcp_client/: mcp_cli.py  mcp_cli_solution.py
MCP/mcp_servers-assets/mcp_server/: task_mcp_server.py  task_mcp_server_solution.py
deep_atlas_mli 2/: .env  pyproject.toml
deep_atlas_mli 2/RAG/: README.md  newsletter_expert.preprocess (1).ipynb  requirement.md
deep_atlas_mli 2/RAG/email_rag_pipeline/: README.md  STEP5_HYBRID_RETRIEVAL.md  STEP6_SEMANTIC_CACHE.md  answer_generation.py  chatbot_app.py  email_parser.ipynb  email_parser.py  hybrid_retrieval.py  hybrid_retrieval_report.md  local_retrieval.py  pseudo_code.md  retrieval.py  semantic_cache.py
deep_atlas_mli 2/RAG/email_rag_pipeline/output/: email_embeddings.json  email_records.json
deep_atlas_mli 2/agent_fundamentals-assets/: pyproject.toml
deep_atlas_mli 2/agent_fundamentals-assets/app/: README.md  app.py  app.solution.py  expenses.db  expenses.test.db  launch_expense_solution.py  storage.py  storage.solution.py  storage_solution_test.ipynb  tmp_solution_test.db
deep_atlas_mli 2/deploying_pretrained_models/: Dockerfile  README.md  handler.py
deep_atlas_mli 2/environment_setup/: name_generator.py  notebooks_and_the_environment.ipynb  running_code_in_notebooks.ipynb
deep_atlas_mli 2/genmail_solution/: README.md
deep_atlas_mli 2/genmail_solution/client/: package-lock.json  package.json  vite.config.ts
deep_atlas_mli 2/genmail_solution/client/src/: App.tsx  constants.ts  types.ts  utils.ts
deep_atlas_mli 2/genmail_solution/server/: .gitignore  main.py  models.py  pyproject.toml  reply_drafter_graph.html  reply_drafter_graph.md  run_tool_tests.sh  seeds.py  task_extractor_graph.html  task_extractor_graph.md  visualize_agents.py
deep_atlas_mli 2/genmail_starter/client/: README.md  package-lock.json  package.json
deep_atlas_mli 2/genmail_starter/server/: .env.example  .gitignore  main.py  models.py  pyproject.toml  seeds.py
deep_atlas_mli 2/lora/: lora.ipynb
deep_atlas_mli 2/lora/wandb/: latest-run
(+214 files in other folders)
