[project]
name = "learn-mcp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "deepeval>=3.9.0,<4.0.0",
    "fastapi>=0.121.2",
    "httpx>=0.27.0",
    "langchain-mcp-adapters>=0.1.13",
    "langchain-ollama>=1.0.0",
    "langchain>=1.0.7",
    "mcp>=1.21.2",
    "ollama>=0.4.0",
    "pytest-asyncio>=1.0.0",
    "pytest>=8.0.0",
    "requests>=2.32.5",
    "uvicorn>=0.32.1",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "module"
asyncio_default_test_loop_scope = "module"
filterwarnings = [
    "ignore::pytest.PytestAssertRewriteWarning",
]